--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,7 +3,13 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <div class="col-4" style="margin: 150px auto 0 auto;">
-       <a class="btn btn-primary" href="{{ path('dashboard') }}">Dashboard</a>
-    </div>
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="col-4" style="margin: 150px auto 0 auto;">
+            <a class="btn btn-primary" href="{{ path('dashboard') }}">Dashboard</a>
+        </div>
+    {% else %}
+        <div class="col-4" style="margin: 150px auto 0 auto;">
+            <a class="btn btn-primary" href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% endif %}
 {% endblock %}
